...
                                        <subviews>
                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="zMd-me-gak">
                                                <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1t1-6F-e4F">
                                                        <rect key="frame" x="0.0" y="0.0" width="93.5" height="50"/>
                                                        <state key="normal" title="Cancel">
                                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="cancel:" destination="9pv-A4-QxB" eventType="touchUpInside" id="rVD-xY-w5s"/>
                                                        </connections>
                                                    </button>
...
                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                        <nil key="textColor"/>
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oir-0q-R24">
                                                        <rect key="frame" x="226.5" y="0.0" width="93.5" height="50"/>
                                                        <state key="normal" title="Done">
                                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="choosedate:" destination="9pv-A4-QxB" eventType="touchUpInside" id="8Ro-Rk-84B"/>
                                                        </connections>
                                                    </button>
...
                                            </segue>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" red="0.84313725490000002" green="0.78039215689999997" blue="0.70980392160000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                            </view>
                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g30-O5-tLz" customClass="LineChartView" customModule="Charts">
                                <rect key="frame" x="0.0" y="137" width="375" height="481"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            </view>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                            <constraint firstAttribute="leadingMargin" secondItem="xHt-Wa-lIe" secondAttribute="leading" id="dMr-Uy-61J"/>
                            <constraint firstAttribute="leadingMargin" secondItem="yc0-DL-yX1" secondAttribute="leading" id="glH-u1-uAs"/>
                            <constraint firstItem="27L-10-hhR" firstAttribute="top" secondItem="L7p-HK-0SC" secondAttribute="bottom" id="kra-Hb-fYb"/>
                            <constraint firstAttribute="trailing" secondItem="qld-CS-08S" secondAttribute="trailing" id="oU1-BW-IMf"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Activity" image="money" id="cPa-gy-q4n"/>
                    <connections>
                        <outlet property="activitybar" destination="cPa-gy-q4n" id="yEo-eb-BKi"/>
                        <outlet property="amountboard" destination="yZV-SO-QQJ" id="eeO-g8-50h"/>
                        <outlet property="amountlabel" destination="Vg8-Ye-tDW" id="1SG-TG-Fwn"/>
                        <outlet property="bottomdatepicker" destination="hwj-d5-amD" id="XHS-Yi-kcQ"/>
                        <outlet property="numberpadview" destination="qld-CS-08S" id="LDj-Ra-dEs"/>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="CYG-0r-oAD" id="Xlj-vi-qop"/>
                            <outlet property="delegate" destination="CYG-0r-oAD" id="B1E-z5-7sf"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Setting" id="fUL-x3-pPc"/>
                    <connections>
                        <segue destination="DG1-ge-GS1" kind="show" identifier="aboutus" id="4a7-a6-o3r"/>
                        <segue destination="Ud1-QE-cvu" kind="show" identifier="feedback" id="Xzg-df-b0H"/>
                        <segue destination="Wfw-DP-K5L" kind="show" identifier="weather" id="bv3-5I-VwL"/>
                    </connections>
                </tableViewController>
...
